# vkraw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  core.md  earth.md  geo.md  imgui.ini  lineprim.md  main_icon_example.c  osm.md  scene-mgt.md  tearoff-win.md  todo.md  vkglobe.json  vkvsg.json  vkvsg_prims
docs/: build_docs.bat  build_docs.sh
docs/naturaldocs/: README.md  style.md
shaders/: cube.frag  cube.vert
src/: main.cpp  vkvsg.cpp
src/core/: AppRunner.cpp  AppRunner.h  EcsWorld.h  RenderTypes.h  SceneGraph.h
src/core/features/globe/: GlobeControls.h  GlobeObject.h
src/core/runtime/: UIObject.h  VkContext.h  VkVisualizerApp.h  VkVisualizerDevice.cpp  VkVisualizerFrame.cpp  VkVisualizerImGui.cpp  VkVisualizerLifecycle.cpp  VkVisualizerResources.cpp
src/core/vulkan/: FramebufferSetup.cpp  FramebufferSetup.h  PipelineSetup.cpp  PipelineSetup.h  RenderPassSetup.cpp  RenderPassSetup.h  SwapchainSetup.cpp  SwapchainSetup.h
src/procRhai/: README.md  copy_animvm.bat  copy_animvm.sh  main.cpp
src/procRhai/animvm/: Cargo.toml
src/procRhai/animvm/src/: lib.rs
src/vkcornell/: CMakeLists.txt  README.md  main.cpp
src/vkcornell/resources/shaders/: cornell.frag  cornell.vert
src/vkglobe/: CubeObject.h  GlobeTileLayer.cpp  GlobeTileLayer.h  OsmProjection.cpp  OsmProjection.h  OsmTileFetcher.cpp  OsmTileFetcher.h  OsmTileManager.cpp  OsmTileManager.h  UIObject.h  VsgVisualizer.cpp  VsgVisualizer.h  main.cpp
src/vkraw/: CubeObject.h  CubeRenderTypes.h  EcsWorld.h  GlobeControls.h  GlobeObject.h  SceneGraph.h  UIObject.h  VkContext.h  VkVisualizer.cpp  VkVisualizer.h  VkVisualizerApp.h  VkVisualizerDevice.cpp  VkVisualizerFrame.cpp  VkVisualizerImGui.cpp  VkVisualizerLifecycle.cpp  VkVisualizerResources.cpp  main.cpp
src/vkraw/setup/: FramebufferSetup.cpp  FramebufferSetup.h  PipelineSetup.cpp  PipelineSetup.h  RenderPassSetup.cpp  RenderPassSetup.h  SwapchainSetup.cpp  SwapchainSetup.h
src/vkscene/: BasicObjects.h  GltfModelObject.cpp  GltfModelObject.h  RenderObject.h  Scene.h  main.cpp
src/vkvsg/: CubeObject.h  LineObject.cpp  TileGeo.cpp  TileGeo.h  UIObject.h  VsgVisualizer.cpp  main.cpp
src/vsgdock/: CubeObject.h  LineObject.cpp  LineObject.h  TileGeo.cpp  UIObject.cpp  UIObject.h  VsgInputManager.cpp  VsgInputManager.h  VsgVisualizer.cpp  VsgVisualizer.h  main.cpp
src/vulkancore/: Buffer.cpp  Context.cpp  ShaderModule.cpp  Swapchain.cpp  Texture.hpp
